# GifThatForYou

./: .mcp.json  Cargo.toml  README.md  cargo-sources.json  install.sh  io.github.kmwallio.GifThatForYou.desktop  io.github.kmwallio.GifThatForYou.metainfo.xml  io.github.kmwallio.GifThatForYou.yml
src/: indicator.rs  lib.rs  main.rs  portal.rs  recorder.rs  region_selector.rs  window.rs
